--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100vw;
+        height: 100vh;
+      }
+
+      img {
+        object-fit: contain;
+        object-position: center;
         width: 100%;
         height: 100%;
       }
@@ -74,14 +81,6 @@
           };
         }
       });
-
-      window.test = () => {
-        client.emit("message", {
-          channel: { login: "test" },
-          user: { login: "nightbot" },
-          message: { text: "https://cdn2.thecatapi.com/images/af9.jpg" },
-        });
-      };
     </script>
   </body>
 </html>
